# AbejasAstutas

./: README.md  pyproject.toml
AbejasAstutas/: ai-log.md
AbejasAstutas-main/: main.py
AbejasAstutas-main/data raw/: DICCIONARIO DE DATOS.xlsx
AbejasAstutas-main/datos/: estados.csv
AbejasAstutas/dashboard/: index.qmd
AbejasAstutas/scripts/.ipynb_checkpoints/: 02_exploracion_analisis-checkpoint.ipynb
dashboard/: custom.scss  index.qmd
data raw/: pobreza_estatal_2020.csv
data/processed/: abandono_sureste.csv  grafica_barras.html  grafica_lineas.html
data/raw/: DICCIONARIO DE DATOS EMS 23-24.xlsx
datos/: estados.csv  nacional.csv  tendencia_abandono.csv
docs/site_libs/bootstrap/: bootstrap-363fa183394c1db4d7683701ee9d46cf.min.css  bootstrap-3caa727a9f8ad0cdf46eca0f6c7692fb.min.css  bootstrap-4e788a4cdf11fa8c933b5d412e73abfb.min.css  bootstrap-50513ba193b2372a56bc999c48e1bf51.min.css  bootstrap-60398719f2373b77fae3b37423c5fb35.min.css  bootstrap-66195d8f0b9589c9c5f41a678e16da38.min.css  bootstrap-73c4f75ebc3e68fbe0edf08e4ee09eb9.min.css  bootstrap-847f0f6e51a240e2f76e2a8018600ecd.min.css  bootstrap-98026885ad9800a61f5a7c90ef8ca005.min.css  bootstrap-b82726cb499d12d42e01e0444f4e5d38.min.css  bootstrap-b8fe78c70c6dbe101e7f9b3cd925ef7e.min.css  bootstrap-ccc1b0e7046936f89cfd689053eb334b.min.css  bootstrap-df87940ae44e6fab33e3d9c1463a4780.min.css  (+8 more)
notebooks/: 01_Limpieza_suroeste.ipynb
scripts/: 01_procesar_datos.ipynb  02_exploracion_analisis.ipynb
scripts/.ipynb_checkpoints/: 01_procesar_datos-checkpoint.ipynb  02_exploracion_analisis-checkpoint.ipynb
