[project]
name = "abejasastutas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbclient<0.10.0",
    "nbformat>=5.10.4",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "polars>=1.39.3",
]
